@@ -2,17 +2,24 @@ package noodlezip.ramen.service;
 
 import lombok.RequiredArgsConstructor;
 import noodlezip.ramen.dto.CategoryResponseDto;
+import noodlezip.ramen.dto.RamenSoupResponseDto;
 import noodlezip.ramen.dto.ToppingResponseDto;
 import noodlezip.ramen.entity.Category;
+import noodlezip.ramen.entity.RamenSoup;
 import noodlezip.ramen.entity.Topping;
 import noodlezip.ramen.repository.CategoryRepository;
 import noodlezip.ramen.repository.RamenReviewRepository;
+import noodlezip.ramen.repository.RamenSoupRepository;
 import noodlezip.ramen.repository.ToppingRepository;
 import noodlezip.store.dto.MenuDetailDto;
 import noodlezip.store.dto.ReviewSummaryDto;
+import noodlezip.store.dto.StoreReviewDto;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -22,6 +29,7 @@ public class RamenService {
     private final ToppingRepository toppingRepository;
     private final CategoryRepository categoryRepository;
     private final RamenReviewRepository ramenReviewRepository;
+    private final RamenSoupRepository ramenSoupRepository;
 
     // 전체 토핑 목록 조회
     public List<ToppingResponseDto> getAllToppings() {
@@ -44,7 +52,7 @@ public class RamenService {
         return menus.stream()
                 .map(MenuDetailDto::getCategoryName)
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // 현재 매장의 메뉴가 포함한 육수 조회
@@ -52,7 +60,7 @@ public class RamenService {
         return menus.stream()
                 .map(MenuDetailDto::getSoupName)
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // 현재 매장의 메뉴가 포함한 토핑 조회
@@ -60,7 +68,7 @@ public class RamenService {
         return menus.stream()
                 .flatMap(menu -> menu.getToppingNames().stream())
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public ReviewSummaryDto getSummaryByStoreId(Long storeId) {
@@ -71,5 +79,32 @@ public class RamenService {
         return ramenReviewRepository.getSummaryByStoreIdAndMenuName(storeId, menuName);
     }
 
+    // 전체 육수 목록 조회
+    public List<RamenSoupResponseDto> getAllSoups() {
+        List<RamenSoup> soups = ramenSoupRepository.findAll();
+        return soups.stream()
+                .map(s -> new RamenSoupResponseDto(s.getId(), s.getSoupName()))
+                .collect(Collectors.toList());
+    }
+
+    // 카테고리별 리뷰 개수 조회
+    public Map<String, Long> getReviewCountByCategory() {
+        return ramenReviewRepository.getReviewCountByCategory();
+    }
+
+    // 육수별 리뷰 개수 조회
+    public Map<String, Long> getReviewCountBySoup() {
+        return ramenReviewRepository.getReviewCountBySoup();
+    }
+
+    // 태그로 필터링된 리뷰 목록 조회
+    public Page<StoreReviewDto> findReviewsByTag(String tag, String type, Pageable pageable) {
+        return ramenReviewRepository.findReviewsByTag(tag, type, pageable);
+    }
+
+    // userId로 내가 쓴 리뷰만 조회
+    public Page<StoreReviewDto> findReviewsByUserId(Long userId, Pageable pageable) {
+        return ramenReviewRepository.findReviewsByUserId(userId, pageable);
+    }
 }
 
